examples/test/testpolicy11562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11562
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key4: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value27
          key20: value23
      podSelector:
        matchLabels:
          key48: value22
          key17: value38
          key45: value0
